--- a/css/main.css
+++ b/css/main.css
@@ -344,7 +344,7 @@ padding:0;
 ==============================*/
 
 #headerwrap {
-	//background: url(../img/header-bg.jpg) no-repeat center top;
+	/* background: url(../img/header-bg.jpg) no-repeat center top; */
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
