--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,10 @@ color: #dd675b;
 margin-bottom:15px;
 }
 
+.text-white{
+	color: #fff!important;
+	text-shadow: 2px 4px 6px #5a5a5a;
+}
 
 /* Paragraph & Typographic */
 p {
@@ -125,7 +129,8 @@ text-shadow: rgba(0, 0, 0, 0.6) 0px 1px 0px;
 /* White Wrap */
 
 .white{
-	background: #ffffff;
+	background-color: #0093E9;
+	background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 	padding-top: 35px;
 	padding-bottom: 35px;
 	text-align: center;
@@ -242,7 +247,6 @@ padding:0;
 }
 
 .menu a > i {
-	float: left;
 	display: inline-block;
 	vertical-align: middle;
 	text-align: left;
@@ -424,7 +428,7 @@ height: 100%;
 	width: 55px;
 	text-align: center;
 	font-family: Roboto Slab;
-	color: #6f6f6f;
+	color: #ffffff;
 	position: relative;
 }
 
@@ -434,7 +438,7 @@ height: 100%;
 	bottom: 0px;
 	right: 6px;
 	font-size: 9pt;
-	color: #6f6f6f;
+	color: #ffffff;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
@@ -531,7 +535,6 @@ width:250px;
 	-o-transform: scale(0);
 	-ms-transform: scale(0);
 	transform: scale(0);
-	-webkit-backface-visibility: hidden;
 }
 
 .ch-info h3 {
@@ -710,7 +713,6 @@ height:150px;
 
 .form-control:focus {
 box-shadow:none;
-webkit-box-shadow:none;
 
 }
 
@@ -930,3 +932,28 @@ display:block;
 	color: transparent;
 	text-shadow: 0 0 5px rgba(0,0,0,0.5);
  }
+
+
+ .glow {
+	color: #fff;
+	text-align: center;
+	-webkit-animation: glow 1s ease-in-out infinite alternate;
+	-moz-animation: glow 1s ease-in-out infinite alternate;
+	animation: glow 1s ease-in-out infinite alternate;
+  }
+  @keyframes glow {
+	from {
+		text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+	  }
+	  to {
+		text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+	  }  
+  }
+  @-webkit-keyframes glow {
+	from {
+	  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+	}
+	to {
+	  text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+	}
+  }
